# Mutibot

./: .gitignore  README.md  brain.py
jsbot/: main.js
jsbot/commands/utils/: ping.js
pybot/: main.py
pybot/cogs/: util.py
pybot/core/: files.py
pybot/data/: config.yml
rustbot/: Cargo.toml
rustbot/src/: main.rs
rustbot/src/commands/: meta.rs  mod.rs
