[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Pug234 <corbin.mckee.ryan@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
chrono = "0.4"
tinyvec_macros = "0.1.0"



[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]


[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
path = "C:/Users/corbi/.cargo/registry/src/github.com-1ecc6299db9ec823/serenity-0.10.2"
